# mlp-mnist

./: README.md  pyproject.toml
src/mlp_mnist/: __init__.py  main.py  util.py
