[project]
name = "mlp-mnist"
version = "0.1.0"
description = "A simple multi-layer perceptron for the MNIST dataset."
authors = [
    { name = "Joseph Quevedo" },
    { name = "Orpheus Lummis", email = "o@orpheuslummis.info" },
]
dependencies = [
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "matplotlib>=3.7.4",
    "PyQt5>=5.15.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
